--- a/build.properties
+++ b/build.properties
@@ -50,3 +50,6 @@ jenkins-bin=${jenkins-home}/bin
 
 tomcat-unpacked=apache-tomcat-7.0.27
 tomcat-gzip=apache-tomcat-7.0.27.tar.gz
+
+userid=root
+password=caherline
