--- a/code/gui/pom.xml
+++ b/code/gui/pom.xml
@@ -55,25 +55,31 @@
 			<artifactId>invient-charts</artifactId>
 			<version>0.8.6</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
 			<version>${gwtVersion}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
 			<version>${gwtVersion}</version>
 		</dependency>
-		
 		<dependency>
             <groupId>org.vaadin.addon</groupId>
             <artifactId>confirmdialog</artifactId>
             <version>1.2.1</version>
         </dependency>
-		
+        <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>googleanalyticstracker</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>wizards-for-vaadin</artifactId>
+            <version>0.4.4</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -88,7 +94,7 @@
 						<configuration>
 							<!-- if you don't specify any modules, the plugin will find them -->
 							<modules>
-								<module>ikube.gui.widgets.InvientWidgets</module>
+								<!-- <module>ikube.gui.widgets.InvientWidgets</module> -->
 							</modules>
 						</configuration>
 						<goals>
@@ -116,7 +122,12 @@
 					<soyc>false</soyc>
 				</configuration>
 				<executions>
-					<!-- <execution> <goals> <goal>resources</goal> <goal>compile</goal> </goals> </execution> -->
+					<!-- <execution>
+						<goals>
+							<goal>resources</goal>
+							<goal>compile</goal>
+						</goals>
+					</execution> -->
 				</executions>
 			</plugin>
 
