--- a/pom.xml
+++ b/pom.xml
@@ -969,6 +969,21 @@
 			<version>2.1.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springmodules</groupId>
+			<artifactId>spring-modules-validation</artifactId>
+			<version>0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.bval</groupId>
+			<artifactId>bval-core</artifactId>
+			<version>0.4</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
