Added forms for adding indexables to the gui.
git-svn-id: http://ikube.googlecode.com/svn/trunk@971 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/gui/pom.xml
+++ b/code/gui/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>wizards-for-vaadin</artifactId>
             <version>0.4.4</version>
         </dependency>
+		<dependency>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>pagingcomponent</artifactId>
+			<version>0.9.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
