--- a/build.xml
+++ b/build.xml
@@ -75,10 +75,6 @@
 	<!-- Deploys the war to all the servers. -->
 	<target name="deploy-ikube">
 	    <!-- Deploy to the server -->
-		<!--  antcall target="copy-to-server">
-			<param name="file-to-copy" value="${target-directory}/${ikube-war}" />
-			<param name="server-directory" value="${userid}:${password}@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" />
-		</antcall -->
 		<antcall target="copy-to-server">
 			<param name="file-to-copy" value="${target-gui-directory}/${ikube-war}" />
 			<param name="server-directory" value="${userid}:${password}@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" />
@@ -90,6 +86,10 @@
 		<antcall target="copy-to-server">
 			<param name="file-to-copy" value="${target-gui-directory}/${ikube-war}" />
 			<param name="server-directory" value="${userid}:${password}@192.168.1.7:/usr/share/apache-tomcat-7.0.27/webapps" />
+		</antcall>
+		<antcall target="copy-to-server">
+			<param name="file-to-copy" value="${target-gui-directory}/${ikube-war}" />
+			<param name="server-directory" value="${userid}:${password}@192.168.1.8:/usr/share/apache-tomcat-7.0.27/webapps" />
 		</antcall>
 	</target>
 	
@@ -106,6 +106,9 @@
 		</antcall>
 		<antcall target="clean-server">
 		    <param name="host" value="192.168.1.7" />
+		</antcall>
+		<antcall target="clean-server">
+		    <param name="host" value="192.168.1.8" />
 		</antcall>
 	</target>
 	
@@ -182,6 +185,11 @@
 		</antcall>
 		<antcall target="copy-directory-to-server">
 		    <param name="host" value="192.168.1.7" />
+			<param name="directory-to-copy" value="${output-configuration-directory}" />
+			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		</antcall>
+		<antcall target="copy-directory-to-server">
+		    <param name="host" value="192.168.1.8" />
 			<param name="directory-to-copy" value="${output-configuration-directory}" />
 			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
 		</antcall>
