--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
 	<properties>
 		<targetJdk>1.6</targetJdk>
 
-		<spring.version>3.0.3.RELEASE</spring.version>
+		<!-- <spring.version>3.0.3.RELEASE</spring.version> -->
 		<spring.security.oauth.version>3.19</spring.security.oauth.version>
-		<spring.security.version>3.0.5.RELEASE</spring.security.version>
+		<spring.version>3.0.5.RELEASE</spring.version>
 		<tiles.version>2.1.3</tiles.version>
 		<slf4j.version>1.5.10</slf4j.version>
 		<logback.version>0.9.15</logback.version>
@@ -388,7 +388,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -411,7 +411,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-acl</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -427,17 +427,17 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.spring-security-oauth</groupId>
@@ -447,7 +447,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-ldap</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
@@ -969,11 +969,11 @@
 			<version>2.1.2</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springmodules</groupId>
 			<artifactId>spring-modules-validation</artifactId>
 			<version>0.8</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
