Fixed a lot of tests and cleaned up some code.
git-svn-id: http://ikube.googlecode.com/svn/trunk@972 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.xml
+++ b/build.xml
@@ -162,6 +162,7 @@
 		<jar destfile="${output-configuration-directory}/${ikube-configuration-jar}" basedir="${output-configuration-directory}" />
 	</target>
 	<target name="deploy-configuration-for-jetty">
+		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="code/core/ikube" overwrite="true" />
 		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="code/war/ikube" overwrite="true" />
 		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="code/gui/ikube" overwrite="true" />
 	</target>
