--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,28 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>2.1.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>prepare-everything</id>
+						<phase>pre-integration-test</phase>
+						<configuration>
+							<target>
+								<echo message="Copying configuration : " />
+								<copy todir="ikube" failonerror="false">
+									<fileset dir="src/main/resources/ikube" />
+								</copy>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			
 			<!-- 
 				This plugin	runs an Ant script after the integration tests to deploy ikube.war to the cluster. 
