Updated the gui with the rest services and Jersey.
git-svn-id: http://ikube.googlecode.com/svn/trunk@973 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -21,7 +21,7 @@ file.max.read.length=1000000
 throttle=0
 max.actions=1
 # Max index size before another one is started in megs
-max.index.size=5000
+max.index.size=6000
 
 # These are client specific for Lucene
 analyzed=true
@@ -57,14 +57,15 @@ period=60000
 max.age.geospatial=72000
 
 # These parameters are for the Ikube documentation index
-ikube.url=http://localhost/ikube
-ikube.url.8080=http://localhost:8080/ikube
+ikube.url=http://localhost/ikube/app
+ikube.url.8080=http://localhost:8080/ikube/app
 ikube.url.8080.login=${ikube.url.8080}/admin/login.html
 
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.url=jdbc:h2:file:ikube/ikube
+# h2.jdbc.url=jdbc:h2:file:ikube/ikube
+h2.jdbc.url=jdbc:h2:mem:ikube
 h2.jdbc.driver=org.h2.Driver
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
