--- a/code/core/src/main/resources/ikube/integration/spring.properties
+++ b/code/core/src/main/resources/ikube/integration/spring.properties
@@ -16,14 +16,14 @@ history.merge.factor=10000
 history.max.field.length=10000
 history.max.read.length=1000000
 
-wiki.history.stored=true
+wiki.history.stored=false
 wiki.history.analyzed=true
 wiki.history.vectored=false
 wiki.history.unpack.zips=false
 wiki.history.compound.file=true
 wiki.history.throttle=1
 
-wiki.history.languages.stored=true
+wiki.history.languages.stored=false
 wiki.history.languages.analyzed=true
 wiki.history.languages.vectored=false
 wiki.history.languages.unpack.zips=false
