--- a/build.properties
+++ b/build.properties
@@ -1,13 +1,13 @@
 ikube-war=ikube.war
-ikube-gui-war=ikube-console.war
+# ikube-gui-war=ikube-console.war
 ikube-configuration-jar=configuration.jar
 
 sleep=30
 
-target-directory=code/war/target
+target-directory=code/gui/target
 target-gui-directory=code/gui/target
 configuration-directory=code/core/src/main/resources/ikube
-output-configuration-directory=code/war/target/ikube
+output-configuration-directory=code/gui/target/ikube
 
 tomcat=/usr/share/apache-tomcat-7.0.27
 tomcat-bin=${tomcat}/bin
