--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,10 @@
 
 	<modules>
 		<module>code/core</module>
-		<module>code/war</module>
+		<!-- <module>code/war</module> -->
 		<!-- <module>code/web</module> -->
 		<module>code/gui</module>
-		<module>code/libs</module>
+		<!-- <module>code/libs</module> -->
 		<module>code/tool</module>
 	</modules>
 
