Updated some JavaDoc. Started the Jsp page for client search. Some small fine tuning of the cluster logic.
git-svn-id: http://ikube.googlecode.com/svn/trunk@985 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/log4j.properties
+++ b/code/core/src/main/resources/META-INF/log4j.properties
@@ -3,12 +3,15 @@ log4j.rootLogger=INFO, console, file
 log4j.rootCategory=INFO, console
 
 # ikube application file logging
-log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Threshold=DEBUG
 log4j.appender.file.File=ikube/ikube.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 log4j.appender.file.Append=false
+log4j.appender.file.ImmediateFlush=true
+log4j.appender.file.MaxFileSize=10MB
+log4j.appender.file.MaxBackupIndex=5
 
 # ikube application console logging
 log4j.appender.console=org.apache.log4j.ConsoleAppender
