--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,15 @@
-<project 
-	xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>4.0.0-SNAPSHOT</version>
+	<version>4.0.0</version>
 
 	<scm>
-		<url>https://ikube.googlecode.com/svn/trunk</url>
-		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
+		<url>https://ikube.googlecode.com/svn/tags/ikube-4.0.0</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-4.0.0</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-4.0.0</developerConnection>
 	</scm>
 
 	<distributionManagement>
