Changed the local repository to home.
git-svn-id: http://ikube.googlecode.com/svn/trunk@995 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<site>
 			<id>ikube</id>
 			<name>ikube-releases</name>
-			<url>file:/root/.m2/repository</url>
+			<url>file:/home/michael/.m2/repository</url>
 		</site>
 		<repository>
 			<id>ikube</id>
