Adding the search page.
git-svn-id: http://ikube.googlecode.com/svn/trunk@999 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -1003,6 +1003,11 @@
 			<artifactId>bval-core</artifactId>
 			<version>0.4</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+			<version>1.3</version>
+		</dependency> -->
 	</dependencies>
 
 	<repositories>
