--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
 		<!-- 9.1-901-1.jdbc4 -->
 		<postgresql.driver.version>9.1-901-1.jdbc4</postgresql.driver.version>
 		<jetty.version>6.1.11</jetty.version>
+		
+		<lucene.version>3.0.1</lucene.version>	
 	</properties>
 
 	<modules>
@@ -634,41 +636,43 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>3.0.1</version>
+			<version>${lucene.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-fast-vector-highlighter</artifactId>
-			<version>3.0.1</version>
+			<version>3.0.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-highlighter</artifactId>
-			<version>3.0.1</version>
+			<version>${lucene.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-spellchecker</artifactId>
-			<version>3.0.1</version>
+			<version>${lucene.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-spatial</artifactId>
-			<version>3.0.2</version>
+			<!-- 3.0.2 -->
+			<version>${lucene.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-misc</artifactId>
-			<version>3.0.2</version>
+			<!-- 3.0.2 -->
+			<version>${lucene.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
