Added the ngram analyzer. Fixed some tests. Did a little JavaScript testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1006 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -42,7 +42,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=/tmp
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*|.*(MANIFEST).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*|.*(MANIFEST).*|.*(media).*|.*(mnt).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 language.word.lists.directory=./ikube/common/languages
@@ -55,7 +55,7 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/multi/spatial
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=60000
+delay=180000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
@@ -69,8 +69,8 @@ ikube.url.8080.login=${ikube.url.8080}/admin/login.html
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-# h2.jdbc.url=jdbc:h2:file:ikube/ikube
-h2.jdbc.url=jdbc:h2:mem:ikube
+h2.jdbc.url=jdbc:h2:file:ikube/ikube
+# h2.jdbc.url=jdbc:h2:mem:ikube
 h2.jdbc.driver=org.h2.Driver
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
