Updated the properties.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1007 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,8 @@
 <project name="Deploy Ikube Cluster" default="deploy">
 
 	<property file="build.properties" />
+	<property file="local-build.properties" />
+
 	<!-- The default profile to deploy. -->
 	<property name="profile" value="production" />
 	<property name="user-dir" value="${user.dir}" />
