Re-implementing the gui in Angular.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1012 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -19,7 +19,7 @@ internet.batch.size=10000
 file.batch.size=10000
 file.max.read.length=1000000
 throttle=0
-max.actions=1
+max.actions=3
 # Max index size before another one is started in megs
 max.index.size=6000
 
@@ -31,7 +31,7 @@ vectored=true
 
 # The number of threads for each indexing component/connector
 table.handler.threads=3
-internet.handler.threads=3
+internet.handler.threads=10
 filesystem.handler.threads=3
 email.handler.threads=3
 
@@ -42,7 +42,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=/tmp
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*|.*(MANIFEST).*|.*(media).*|.*(mnt).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*|.*(MANIFEST).*|.*(media).*|.*(mnt).*|.*(michael).*|.*(Backup).*|.*(Data).*|.*(data).*|.*(Backup).*|.*(root).*|.*(Password).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 language.word.lists.directory=./ikube/common/languages
@@ -57,7 +57,7 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/multi/spatial
 # The delay before the scheduled tasks start executing
 delay=180000
 # The period between notifications for timed tasks
-period=60000
+period=180000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=72000
 
@@ -95,13 +95,13 @@ oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.minPoolSize=1
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=10000
+jdbc.checkOutTimeout=10000000
 jdbc.numHelperThreads=25
 jdbc.breakAfterAcquireFailure=true
 jdbc.debugUnreturnedConnectionStackTraces=true
 jdbc.testConnectionOnCheckin=true
 jdbc.testConnectionOnCheckout=true
-jdbc.unreturnedConnectionTimeout=6000
+jdbc.unreturnedConnectionTimeout=6000000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
