Continued with the migration from Vaadin to Angular.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1013 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -42,7 +42,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=/tmp
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*|.*(MANIFEST).*|.*(media).*|.*(mnt).*|.*(michael).*|.*(Backup).*|.*(Data).*|.*(data).*|.*(Backup).*|.*(root).*|.*(Password).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(media).*|.*(mnt).*|.*(michael).*|.*(backup).*|.*(Backup).*|.*(root).*|.*(/tmp).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 language.word.lists.directory=./ikube/common/languages
