--- a/build.properties
+++ b/build.properties
@@ -1,49 +1,32 @@
 ikube-war=ikube.war
-# ikube-gui-war=ikube-console.war
 ikube-configuration-jar=configuration.jar
 
 sleep=30
 
-target-directory=code/gui/target
-target-gui-directory=code/gui/target
+target-directory=code/war/target
+target-gui-directory=code/war/target
 configuration-directory=code/core/src/main/resources/ikube
-output-configuration-directory=code/gui/target/ikube
+output-configuration-directory=code/war/target/ikube
 
 tomcat=/usr/share/apache-tomcat-7.0.27
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
 
-cluster-directory=/usr/share/cluster
-tomcats-directory=${cluster-directory}/tomcats
-indexes-directory=${cluster-directory}/indexes
+jboss=${cluster-directory}/jboss-7.0.2
+jboss-bin=${jboss-1}/bin
+jboss-deploy=${jboss-1}/standalone/deployments
 
-tomcat-1=${tomcats-directory}/apache-tomcat-6.0.29-1
-tomcat-2=${tomcats-directory}/apache-tomcat-6.0.29-2
-tomcat-3=${tomcats-directory}/apache-tomcat-6.0.29-3
+glassfish=${cluster-directory}/glassfish3/glassfish
+glassfish-bin=${glassfish-1}/bin
+glassfish-deploy=${glassfish-1}/domains/domain1/autodeploy
 
-tomcat-1-webapps=${tomcat-1}/webapps
-tomcat-2-webapps=${tomcat-2}/webapps
-tomcat-3-webapps=${tomcat-3}/webapps
+oc4j=${cluster-directory}/oc4j
+oc4j-bin=${oc4j-1}/bin
+oc4j-deploy=${oc4j-1}/j2ee/home/applications
 
-tomcat-1-bin=${tomcat-1}/bin
-tomcat-2-bin=${tomcat-2}/bin
-tomcat-3-bin=${tomcat-3}/bin
-
-jboss-1=${cluster-directory}/jboss-7.0.2
-jboss-1-bin=${jboss-1}/bin
-jboss-1-deploy=${jboss-1}/standalone/deployments
-
-glassfish-1=${cluster-directory}/glassfish3/glassfish
-glassfish-1-bin=${glassfish-1}/bin
-glassfish-1-deploy=${glassfish-1}/domains/domain1/autodeploy
-
-oc4j-1=${cluster-directory}/oc4j
-oc4j-1-bin=${oc4j-1}/bin
-oc4j-1-deploy=${oc4j-1}/j2ee/home/applications
-
-weblogic-1=${cluster-directory}/wlserver/common
-weblogic-1-bin=${weblogic-1}/bin
-weblogic-1-deploy=${weblogic-1}/deployable-libraries
+weblogic=${cluster-directory}/wlserver/common
+weblogic-bin=${weblogic-1}/bin
+weblogic-deploy=${weblogic-1}/deployable-libraries
 
 jenkins-home=/usr/local/apache-tomcat-7.0.25
 jenkins-bin=${jenkins-home}/bin
