--- a/pom.xml
+++ b/pom.xml
@@ -909,13 +909,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.openjpa</groupId>
 			<artifactId>openjpa-all</artifactId>
 			<version>2.1.0</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -1002,20 +1002,15 @@
 			<version>1.1.0.Alpha1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.bval</groupId>
-			<artifactId>bval-core</artifactId>
-			<version>0.4</version>
-		</dependency>
-		<!-- <dependency>
-			<groupId>xmlunit</groupId>
-			<artifactId>xmlunit</artifactId>
-			<version>1.3</version>
-		</dependency> -->
-		<dependency>
 			<groupId>org.mozilla</groupId>
 			<artifactId>rhino</artifactId>
 			<version>1.7R4</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.openjpa</groupId>
+			<artifactId>openjpa-all</artifactId>
+			<version>2.2.1</version>
 		</dependency>
 	</dependencies>
 
