Finished the search page and the map.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1017 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -4,32 +4,12 @@ ikube-configuration-jar=configuration.jar
 sleep=30
 
 target-directory=code/war/target
-target-gui-directory=code/war/target
 configuration-directory=code/core/src/main/resources/ikube
 output-configuration-directory=code/war/target/ikube
 
-tomcat=/usr/share/apache-tomcat-7.0.27
+tomcat=/usr/share/apache-tomcat-7.0.33
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
 
-jboss=${cluster-directory}/jboss-7.0.2
-jboss-bin=${jboss-1}/bin
-jboss-deploy=${jboss-1}/standalone/deployments
-
-glassfish=${cluster-directory}/glassfish3/glassfish
-glassfish-bin=${glassfish-1}/bin
-glassfish-deploy=${glassfish-1}/domains/domain1/autodeploy
-
-oc4j=${cluster-directory}/oc4j
-oc4j-bin=${oc4j-1}/bin
-oc4j-deploy=${oc4j-1}/j2ee/home/applications
-
-weblogic=${cluster-directory}/wlserver/common
-weblogic-bin=${weblogic-1}/bin
-weblogic-deploy=${weblogic-1}/deployable-libraries
-
-jenkins-home=/usr/local/apache-tomcat-7.0.25
-jenkins-bin=${jenkins-home}/bin
-
-tomcat-unpacked=apache-tomcat-7.0.27
-tomcat-gzip=apache-tomcat-7.0.27.tar.gz
+tomcat-zip=apache-tomcat-7.0.33.zip
+tomcat-unpacked=apache-tomcat-7.0.33
